add x-webauth-user token to needed handlers
