# api/handler/subscription.go
@@ -30,6 +30,7 @@ func subscription(router chi.Router) {
 // @id			get-user-subscriptions
 // @tags		subscription
 // @produce	json
+// @param x-webauth-user header string false "User session token"
 // @success	200	{object}	dto.SubscriptionList			"Subscriptions fetched successfully"
 // @failure	422	{object}	api.ErrorRenderExample			"Render error"
 // @failure	500	{object}	api.ErrorInternalServerExample	"Internal server error"
@@ -52,6 +53,7 @@ func getUserSubscriptions(writer http.ResponseWriter, request *http.Request) {
 // @tags		subscription
 // @accept		json
 // @produce	json
+// @param x-webauth-user header string false "User session token"
 // @param		subscription	body		dto.Subscription				true	"Subscription data"
 // @success	200				{object}	dto.Subscription				"Subscription created successfully"
 // @failure	400				{object}	api.ErrorInvalidRequestExample	"Bad request from client"
@@ -102,6 +104,7 @@ func subscriptionFilter(next http.Handler) http.Handler {
 // @tags		subscription
 // @accept		json
 // @produce	json
+// @param x-webauth-user header string false "User session token"
 // @param		subscriptionId	path		string							true	"ID of the subscription to update"	extensions(x-example=bcba82f5-48cf-44c0-b7d6-e1d32c64a88c)
 // @param		subscription	body		dto.Subscription				true	"Updated subscription data"
 // @success	200				{object}	dto.Subscription				"Subscription updated successfully"
@@ -147,6 +150,7 @@ func updateSubscription(writer http.ResponseWriter, request *http.Request) {
 // @tags		subscription
 // @produce	json
 // @param		subscriptionId	path	string	true	"ID of the subscription to remove"	extensions(x-example=bcba82f5-48cf-44c0-b7d6-e1d32c64a88c)
+// @param x-webauth-user header string false "User session token"
 // @success	200				"Subscription deleted"
 // @failure	403				{object}	api.ErrorForbiddenExample		"Forbidden"
 // @failure	404				{object}	api.ErrorNotFoundExample		"Resource not found"
@@ -163,6 +167,7 @@ func removeSubscription(writer http.ResponseWriter, request *http.Request) {
 // @id			send-test-notification
 // @tags		subscription
 // @produce	json
+// @param x-webauth-user header string false "User session token"
 // @param		subscriptionId	path	string	true	"ID of the subscription to send the test notification"	extensions(x-example=bcba82f5-48cf-44c0-b7d6-e1d32c64a88c)
 // @success	200				"Test notification sent successfully"
 // @failure	403				{object}	api.ErrorForbiddenExample		"Forbidden"
