# docs/swagger.json
@@ -73,6 +73,12 @@
                 "operationId": "create-new-contact",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
+                    {
                         "description": "Contact data",
                         "name": "contact",
                         "in": "body",
@@ -124,6 +130,12 @@
                 "summary": "Updates an existing notification contact to the values passed in the request body",
                 "operationId": "update-contact",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "description": "ID of the contact to update",
@@ -195,6 +207,12 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
                         "x-example": "bcba82f5-48cf-44c0-b7d6-e1d32c64a88c",
                         "description": "ID of the contact to remove",
                         "name": "contactId",
@@ -247,6 +265,12 @@
                 "summary": "Push a test notification to verify that the contact is properly set up",
                 "operationId": "send-test-contact-notification",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "x-example": "bcba82f5-48cf-44c0-b7d6-e1d32c64a88c",
@@ -655,6 +679,14 @@
                 ],
                 "summary": "Get all subscriptions",
                 "operationId": "get-user-subscriptions",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Subscriptions fetched successfully",
@@ -689,6 +721,12 @@
                 "summary": "Create a new subscription",
                 "operationId": "create-subscription",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "description": "Subscription data",
                         "name": "subscription",
@@ -741,6 +779,12 @@
                 "summary": "Update a subscription",
                 "operationId": "update-subscription",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "x-example": "bcba82f5-48cf-44c0-b7d6-e1d32c64a88c",
@@ -815,6 +859,12 @@
                         "name": "subscriptionId",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -853,6 +903,12 @@
                 "summary": "Send a test notification for a subscription",
                 "operationId": "send-test-notification",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "x-example": "bcba82f5-48cf-44c0-b7d6-e1d32c64a88c",
@@ -999,78 +1055,6 @@
                 }
             }
         },
-        "/team/{teamID}/subscriptions": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "teamSubscription"
-                ],
-                "summary": "Create a new team subscription",
-                "operationId": "create-new-team-subscription",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "x-example": "d5d98eb3-ee18-4f75-9364-244f67e23b54",
-                        "description": "The ID of team",
-                        "name": "teamID",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Team subscription data",
-                        "name": "subscription",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.Subscription"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Team subscription created successfully",
-                        "schema": {
-                            "$ref": "#/definitions/dto.Subscription"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request from client",
-                        "schema": {
-                            "$ref": "#/definitions/api.ErrorInvalidRequestExample"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/api.ErrorForbiddenExample"
-                        }
-                    },
-                    "404": {
-                        "description": "Resource not found",
-                        "schema": {
-                            "$ref": "#/definitions/api.ErrorNotFoundExample"
-                        }
-                    },
-                    "422": {
-                        "description": "Render error",
-                        "schema": {
-                            "$ref": "#/definitions/api.ErrorRenderExample"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/api.ErrorInternalServerExample"
-                        }
-                    }
-                }
-            }
-        },
         "/teams": {
             "get": {
                 "produces": [
@@ -1081,6 +1065,14 @@
                 ],
                 "summary": "Get all teams",
                 "operationId": "get-all-teams",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Teams fetched successfully",
@@ -1115,6 +1107,12 @@
                 "summary": "Create a new team",
                 "operationId": "create-team",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "description": "Team data",
                         "name": "team",
@@ -1171,6 +1169,12 @@
                         "name": "teamID",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -1213,6 +1217,12 @@
                 "summary": "Delete a team",
                 "operationId": "delete-team",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "x-example": "d5d98eb3-ee18-4f75-9364-244f67e23b54",
@@ -1283,6 +1293,12 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
+                    {
                         "description": "Updated team data",
                         "name": "team",
                         "in": "body",
@@ -1346,6 +1362,12 @@
                 "summary": "Create a new team contact",
                 "operationId": "create-new-team-contact",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "x-example": "d5d98eb3-ee18-4f75-9364-244f67e23b54",
@@ -1417,6 +1439,12 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
                         "description": "ID of the team",
                         "name": "teamID",
                         "in": "path",
@@ -1457,6 +1485,84 @@
                 }
             }
         },
+        "/teams/{teamID}/subscriptions": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "teamSubscription"
+                ],
+                "summary": "Create a new team subscription",
+                "operationId": "create-new-team-subscription",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "x-example": "d5d98eb3-ee18-4f75-9364-244f67e23b54",
+                        "description": "The ID of team",
+                        "name": "teamID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Team subscription data",
+                        "name": "subscription",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.Subscription"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Team subscription created successfully",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Subscription"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request from client",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorInvalidRequestExample"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorForbiddenExample"
+                        }
+                    },
+                    "404": {
+                        "description": "Resource not found",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorNotFoundExample"
+                        }
+                    },
+                    "422": {
+                        "description": "Render error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorRenderExample"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorInternalServerExample"
+                        }
+                    }
+                }
+            }
+        },
         "/teams/{teamID}/users": {
             "get": {
                 "produces": [
@@ -1468,6 +1574,12 @@
                 "summary": "Get users of a team",
                 "operationId": "get-team-users",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "x-example": "d5d98eb3-ee18-4f75-9364-244f67e23b54",
@@ -1523,6 +1635,12 @@
                 "summary": "Set users of a team",
                 "operationId": "set-team-users",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "x-example": "d5d98eb3-ee18-4f75-9364-244f67e23b54",
@@ -1595,6 +1713,12 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
                         "x-example": "d5d98eb3-ee18-4f75-9364-244f67e23b54",
                         "description": "ID of the team",
                         "name": "teamID",
@@ -1653,12 +1777,21 @@
         },
         "/teams/{teamID}/users/{teamUserID}": {
             "delete": {
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "team"
                 ],
                 "summary": "Delete a user from a team",
                 "operationId": "delete-team-user",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "x-example": "d5d98eb3-ee18-4f75-9364-244f67e23b54",
@@ -1760,6 +1893,12 @@
                 "summary": "Create a new trigger",
                 "operationId": "create-trigger",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "description": "Trigger data",
                         "name": "trigger",
@@ -2042,6 +2181,12 @@
                 "summary": "Update existing trigger",
                 "operationId": "update-trigger",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User session token",
+                        "name": "x-webauth-user",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "x-example": "5A8AF369-86D2-44DD-B514-D47995ED6AF7",
